--- a/frontend/src/components/Restaurants/RestaurantsSplashPage.css
+++ b/frontend/src/components/Restaurants/RestaurantsSplashPage.css
@@ -11,6 +11,7 @@
   overflow: auto;
   width: 100%;
   height: 100%;
-  background-color: silver;
+  background-color: palegreen;
   align-items: center;
+  white-space: nowrap;
 }
